--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  .loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: unset;
 }
 
 code {
