--- a/src/pages/Add/styles.scss
+++ b/src/pages/Add/styles.scss
@@ -1,3 +1,5 @@
+$myBorder: 1px solid black;
+
 .addproduct {
   max-width: 1200px;
   margin: auto;
@@ -7,13 +9,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid black;
+    border-bottom: $myBorder;
     padding-bottom: 10px;
 
     button {
       box-shadow: 2px 2px black;
     }
-  
+
     .cancel_button {
       margin-left: 10px;
     }
@@ -23,10 +25,51 @@
     margin-top: 30px;
 
     label {
-      width: 400px;
+      width: 250px;
       display: grid;
       grid-template-columns: 1fr 3fr;
-      margin-bottom: 10px;
+      margin-top: 10px;
+    }
+
+    .product_form {
+      margin-top: 30px;
+
+      p {
+        font-size: 13px;
+        width: 240px;
+      }
+
+      label {
+        display: flex;
+        margin-bottom: 10px;
+        width: 300px;
+
+        input {
+          margin-left: 5%;
+        }
+      }
+
+      .dvd_form {
+        border: $myBorder;
+        padding: 15px;
+        height: 96px;
+        width: 250px;
+      }
+
+      .furniture_form {
+        border: $myBorder;
+        padding: 15px;
+        height: 160px;
+        width: 275px;
+      }
+
+      .book_form {
+        border: $myBorder;
+        padding: 15px;
+        height: 96px;
+        width: 275px;
+      }
+
     }
 
     .select_label {
