--- a/src/pages/Add/styles.scss
+++ b/src/pages/Add/styles.scss
@@ -29,6 +29,12 @@ $myBorder: 1px solid black;
       display: grid;
       grid-template-columns: 1fr 3fr;
       margin-top: 10px;
+      
+      .error {
+        color: red;
+        font-size: 10px;
+        // white-space: pre-wrap;
+      }
     }
 
     .product_form {
