Fron't end logically and almost completed.

--- a/src/pages/Add/styles.scss
+++ b/src/pages/Add/styles.scss
@@ -1,14 +1,24 @@
 $myBorder: 1px solid black;
 
+%errorStyle {
+  color: red;
+  font-size: 58%;
+  display: block;
+}
+
+%display-and-Justify {
+  display: flex;
+  justify-content: space-between;
+}
+
 .addproduct {
   max-width: 1200px;
   margin: auto;
   padding: 30px 30px;
 
   .header {
-    display: flex;
+    @extend %display-and-Justify;
     align-items: center;
-    justify-content: space-between;
     border-bottom: $myBorder;
     padding-bottom: 10px;
 
@@ -29,31 +39,34 @@ $myBorder: 1px solid black;
       display: grid;
       grid-template-columns: 1fr 3fr;
       margin-top: 10px;
-      
-      .error {
-        color: red;
-        font-size: 10px;
-        // white-space: pre-wrap;
-      }
+
+
+    }
+
+    .error {
+      @extend %errorStyle;
     }
 
     .product_form {
       margin-top: 30px;
       border: $myBorder;
-        padding: 15px;
-        height: fit-content;
-        width: fit-content;
+      padding: 15px;
+      height: fit-content;
+      width: fit-content;
 
       p {
         margin-top: 10px;
         font-size: 13px;
-        width: 240px;
+      }
+
+      .error {
+        @extend %errorStyle;
+        margin-top: auto;
       }
 
       label {
-        display: flex;
+        @extend %display-and-Justify;
         width: 265px;
-        justify-content: space-between;
       }
 
     }
