--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -19,6 +19,15 @@
     }
   }
 
+  .footer {
+    border-top: 1px solid black;
+    margin-top: 30px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    position: bottom;
+  }
+
   .list_container {
     margin-top: 30px;
     display: grid;
@@ -29,8 +38,8 @@
 
     .card {
       border: 1px solid black;
-      height: 200px;
-      width: 200px;
+      height: 160px;
+      width: 210px;
       display: flex;
       justify-content: center;
       align-items: center;
